manifests/base/microservices/catalogue/catalogue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: sock-shop
  labels:
    name: catalogue
    monitor: "true"
spec:
  selector:
    name: catalogue
  ports:
    - name: http
      port: 80
      targetPort: 80
