manifests/base/microservices/catalogue/catalogue-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalogue-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: catalogue
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - protocol: TCP
      port: 80
